Fix container spacing

--- a/src/styles/00-settings/_layout.scss
+++ b/src/styles/00-settings/_layout.scss
@@ -1,1 +1,2 @@
+$wrapper-spacing: 1em;
 $wrapper-width: 32em;
