--- a/src/styles/04-objects/_container.scss
+++ b/src/styles/04-objects/_container.scss
@@ -2,8 +2,10 @@ $module: '.container';
 
 #{$module} {
 	margin: 1em auto;
+	padding-left: $wrapper-spacing;
+	padding-right: $wrapper-spacing;
 
-	@include breakpoint($wrapper-width) {
+	@include breakpoint($wrapper-width + ($wrapper-spacing * 2)) {
 		width: $wrapper-width;
 	}
 }
